* Fixed: WooCommerce deprecated use of `WC_Cart::get_cart_url`.
* Removed: No more support for thumbnail borders; the filter `themeblvd_featured_thumb_frame` has been removed. Use CSS customization instead.
* Removed: No more support for [Theme Blvd Sliders](https://wordpress.org/plugins/theme-blvd-sliders/) plugin.
* Removed: No more html5shiv for HTML5 compatibility with IE8.
* Updated: Chart.js to 2.7.1.
* Updated: easyPieChart to 2.1.6.
* Updated: Isotope to 3.0.4.
* **Important:** If you have [template part files](http://dev.themeblvd.com/tutorial/template-parts-framework-2-5/) in your child theme, they MUST be moved into a directory named `template-parts`.

--------------------------------------------------------------

2.1.14 - 11/08/2017
-------------------

* **Updated Theme Blvd framework to 2.6.13**
* Improvement: Better consistency loading background video from YouTube and Vimeo.
* Improvement: Include all frontend functionality generally for better compatibility for third-party plugins that may be incorporating frontend components within the admin panel.
* Improvement: Added filter `themeblvd_editor_settings`, applied to settings passed to framework instances of `wp_editor()`.

--------------------------------------------------------------

2.1.13 - 09/19/2017
-------------------

* **Updated Theme Blvd framework to 2.6.12**
* Fixed: TinyMCE toolbar's dropdown menus not showing when the using Visual Editor within Theme Blvd Layout Builder.

--------------------------------------------------------------

2.1.12 - 09/11/2017
-------------------

* **Updated Theme Blvd framework to 2.6.11**
* Improvement: Sticky menu is now at 0 opacity when it's hidden for protection against systems that allow temporary scrolling past the viewport top.
* Fixed: Sticky menu and scroll effects not working in Chrome v61.
* Fixed: PHP warning from media.php, "A non-numeric value encountered."

--------------------------------------------------------------
