@@ -470,92 +470,6 @@ if ( ! function_exists( 'themeblvd_epic_thumb' ) ) {
 	}
 }
 
-// @TODO Remove featured area. Issue #210.
-if ( ! function_exists( 'themeblvd_featured_start_default' ) ) :
-	/**
-	 * Default display for action: themeblvd_featured_start
-	 *
-	 * @since Theme_Blvd 2.0.0
-	 */
-	function themeblvd_featured_start_default() {
-		$classes = '';
-		$featured = themeblvd_config( 'featured' );
-		if ( $featured ) {
-			foreach ( $featured as $class ) {
-				$classes .= " $class";
-			}
-		}
-		?>
-		<!-- FEATURED (start) -->
-
-		<div id="featured">
-		<div class="featured-inner<?php echo $classes; ?>">
-			<div class="featured-content clearfix">
-	<?php
-	}
-endif;
-
-// @TODO Remove featured area. Issue #210.
-if ( ! function_exists( 'themeblvd_featured_end_default' ) ) :
-	/**
-	 * Default display for action: themeblvd_featured_end
-	 *
-	 * @since Theme_Blvd 2.0.0
-	 */
-	function themeblvd_featured_end_default() {
-		?>
-			</div><!-- .featured-content (end) -->
-		</div><!-- .featured-inner (end) -->
-		</div><!-- #featured (end) -->
-
-		<!-- FEATURED (end) -->
-		<?php
-	}
-endif;
-
-// @TODO Remove featured area. Issue #210.
-if ( ! function_exists( 'themeblvd_featured_below_start_default' ) ) :
-	/**
-	 * Default display for action: themeblvd_featured_below_start
-	 *
-	 * @since Theme_Blvd 2.1.0
-	 */
-	function themeblvd_featured_below_start_default() {
-		$classes = '';
-		$featured_below = themeblvd_config( 'featured_below' );
-		if ( $featured_below ) {
-			foreach ( $featured_below as $class ) {
-				$classes .= " $class";
-			}
-		}
-		?>
-		<!-- FEATURED BELOW (start) -->
-
-		<div id="featured_below">
-		<div class="featured_below-inner<?php echo $classes; ?>">
-			<div class="featured_below-content clearfix">
-	<?php
-	}
-endif;
-
-// @TODO Remove featured area. Issue #210.
-if ( ! function_exists( 'themeblvd_featured_below_end_default' ) ) :
-	/**
-	 * Default display for action: themeblvd_featured_below
-	 *
-	 * @since Theme_Blvd 2.1.0
-	 */
-	function themeblvd_featured_below_end_default() {
-		?>
-			</div><!-- .featured_below-content (end) -->
-		</div><!-- .featured_below-inner (end) -->
-		</div><!-- #featured_below (end) -->
-
-		<!-- FEATURED BELOW (end) -->
-		<?php
-	}
-endif;
-
 if ( ! function_exists( 'themeblvd_main_start_default' ) ) {
 
 	/**
